# nephis

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.c.BDF3829F720B26AC.idx
src/: main.c
